fixed header spacing error

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,15 +1,17 @@
 #root {
   background-color: #142a38;
   color: white;
-  height: 100vh;
 }
 #header {
   position: fixed;
+  z-index: 1;
 }
 #app-outer-wrapper {
   display: flex;
   justify-content: center;
   width: 100%;
+  position: relative;
+  top: 57px;
 }
 #app-wrapper {
   max-width: 500px;
